fix: add more height to library on mobile to make it fit taller displays better

--- a/src/components/palette/SavedPaletteWindow.scss
+++ b/src/components/palette/SavedPaletteWindow.scss
@@ -3,7 +3,7 @@
 .savedPaletteWindow{
     display: flex;
     flex-direction: column;
-    height: clamp(500px, 80vh, 900px);
+    height: clamp(500px, 80vh, 1400px);
     width: 100%;
     position: absolute;
     background-color: var(--card-bg-color);
